--- a/Bakery/Views/Windows/UserRegWindow.xaml
+++ b/Bakery/Views/Windows/UserRegWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Bakery.Views.UserRegView"
+﻿<Window x:Class="Bakery.Views.Windows.UserRegWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
