--- a/Bakery/Views/Windows/UserAuthWindow.xaml
+++ b/Bakery/Views/Windows/UserAuthWindow.xaml
@@ -11,7 +11,7 @@
              WindowStartupLocation="CenterScreen"
              Name="Window">
     <Window.DataContext>
-        <viewmodels:UserAuthViewModel/>
+        <viewmodels:UserAuthWindowViewModel/>
     </Window.DataContext>
 
     <StackPanel
