--- a/Bakery/Resources/Templates/MainWindowViewTemplates.xaml
+++ b/Bakery/Resources/Templates/MainWindowViewTemplates.xaml
@@ -1,13 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:Bakery.Views.Workspaces"
-                    xmlns:viewmodels="clr-namespace:Bakery.ViewModels"
-                    xmlns:viewmodelsbase="clr-namespace:Bakery.ViewModels.Base">
+                    xmlns:viewmodels="clr-namespace:Bakery.ViewModels">
     
     <!-- Спецификации продуктов -->
     <DataTemplate
         DataType="{x:Type viewmodels:ProductSpecificationsViewModel}">
         <views:ProductSpecificationsView/>
+    </DataTemplate>
+
+    <!-- Добавление/редактирование спецификации продукта -->
+    <DataTemplate
+        DataType="{x:Type viewmodels:ProductSpecificationAddEditViewModel}">
+        <views:ProductSpecificationAddEditView/>
     </DataTemplate>
 
     <!-- Шаблон команды-гиперссылки -->
