--- a/Bakery/Views/Workspaces/ProductSpecificationsView.xaml
+++ b/Bakery/Views/Workspaces/ProductSpecificationsView.xaml
@@ -7,29 +7,96 @@
              xmlns:viewmodels="clr-namespace:Bakery.ViewModels"
              xmlns:properties="clr-namespace:Bakery.Properties"
              mc:Ignorable="d">
+    
     <UserControl.DataContext>
         <viewmodels:ProductSpecificationsViewModel/>
     </UserControl.DataContext>
 
     <ScrollViewer>
-        
         <ItemsControl
             ItemsSource="{Binding ProductSpecifications}"
-            d:ItemsSource="{d:SampleData ItemCount=3}"
-            ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            Margin="0,0,5,5">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel
+                        IsItemsHost="True"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Border
                         BorderBrush="Black"
                         BorderThickness="1"
                         CornerRadius="5"
-                        Padding="5"
-                        Margin="5,0,5,5"
-                        Background="White">
+                        Padding="10"
+                        Margin="5,5,0,0"
+                        Background="White"
+                        Width="250"
+                        Height="300">
                         <Grid>
-                            <Image
-                                Source="{Binding Photo, TargetNullValue={StaticResource NoPhoto}}"
-                                Width="125"/>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+
+                            <Border>
+                                <Image
+                                    Source="{Binding Photo,
+                                                     TargetNullValue={StaticResource NoPhoto}}"
+                                    Grid.Row="0"
+                                    Height="100"
+                                    Margin="0,0,0,5"/>
+                            </Border>
+                            <TextBlock
+                                Text="{Binding Title}"
+                                TextWrapping="Wrap"
+                                Grid.Row="1"
+                                Foreground="Red"
+                                FontSize="16"
+                                Margin="0,0,0,5"/>
+                            <TextBlock
+                                Text="{Binding Description,
+                                               Converter={StaticResource TextLengthConverter},
+                                               ConverterParameter=80}"
+                                Grid.Row="2"
+                                TextWrapping="Wrap"
+                                Margin="0,0,0,5"/>
+
+                            <StackPanel
+                                Grid.Row="3">
+                                <TextBlock
+                                    Margin="0,0,0,5">
+                                    <TextBlock.Text>
+                                        <MultiBinding
+                                            StringFormat="{}Вес: {0} {1}">
+                                            <Binding
+                                                Path="Weight"/>
+                                            <Binding
+                                                Path="MeasureUnit.Title"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                                <DockPanel
+                                    VerticalAlignment="Bottom">
+                                    <TextBlock
+                                        Text="{Binding Price,
+                                                    StringFormat={}# &#8381;}"
+                                        Margin="0,0,5,0"
+                                        DockPanel.Dock="Left"
+                                        VerticalAlignment="Center"/>
+
+                                    <Button
+                                        Command="{Binding DataContext.EditCommand,
+                                                          RelativeSource={RelativeSource FindAncestor,
+                                                          AncestorType={x:Type UserControl}}}"
+                                        CommandParameter="{Binding {}}"
+                                        Content="Редактировать"
+                                        DockPanel.Dock="Right"
+                                        HorizontalAlignment="Right"/>
+                                </DockPanel>
+                            </StackPanel>
                         </Grid>
                     </Border>
                 </DataTemplate>
