--- a/Bakery/Resources/Styles/ButtonStyle.xaml
+++ b/Bakery/Resources/Styles/ButtonStyle.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="Button" BasedOn="{StaticResource CommonStyle}">
+    <Style TargetType="Button" BasedOn="{StaticResource FontStyle}">
         <Setter Property="Padding" Value="2.5"/>
+        <Setter Property="Background" Value="{StaticResource AccentColor}"/>
     </Style>
 </ResourceDictionary>
