--- a/Bakery/Resources/Styles/TextBlockStyle.xaml
+++ b/Bakery/Resources/Styles/TextBlockStyle.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="TextBlock" BasedOn="{StaticResource CommonStyle}">
+    <Style TargetType="TextBlock" BasedOn="{StaticResource FontStyle}">
     </Style>
 </ResourceDictionary>
