--- a/Bakery/Views/Workspaces/ProductSpecificationsView.xaml
+++ b/Bakery/Views/Workspaces/ProductSpecificationsView.xaml
@@ -30,7 +30,7 @@
                         CornerRadius="5"
                         Padding="10"
                         Margin="5,5,0,0"
-                        Background="White"
+                        Background="{StaticResource BackgroundColor}"
                         Width="250"
                         Height="300">
                         <Grid>
@@ -53,8 +53,8 @@
                                 Text="{Binding Title}"
                                 TextWrapping="Wrap"
                                 Grid.Row="1"
-                                Foreground="Red"
-                                FontSize="16"
+                                Foreground="{StaticResource TextColor}"
+                                FontSize="18"
                                 Margin="0,0,0,5"/>
                             <TextBlock
                                 Text="{Binding Description,
