--- a/Bakery/Views/Windows/UserRegWindow.xaml
+++ b/Bakery/Views/Windows/UserRegWindow.xaml
@@ -17,7 +17,7 @@
     </Window.Resources>
 
     <Window.DataContext>
-        <viewmodels:UserRegWindowViewModel/>
+        <viewmodels:UserRegWindowVM/>
     </Window.DataContext>
 
     <ScrollViewer
