--- a/Bakery/Views/Workspaces/ProdSpecsVM.xaml
+++ b/Bakery/Views/Workspaces/ProdSpecsVM.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bakery.Views.Workspaces.ProductSpecificationsView"
+﻿<UserControl x:Class="Bakery.Views.Workspaces.ProdSpecsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,7 +9,7 @@
              mc:Ignorable="d">
     
     <UserControl.DataContext>
-        <viewmodels:ProductSpecificationsViewModel/>
+        <viewmodels:ProdSpecsVM/>
     </UserControl.DataContext>
 
     <ScrollViewer>
